[package]
name = "website_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dioxus = "0.5.1"
dioxus-ssr = "0.5.1"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
